--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -3,20 +3,21 @@
 
 :root {
   /* Colores */
-  --color-turquesa: #40E0D0;
-  --color-blanco: #FFFFFF;
-  --color-gris-oscuro: #333333;
-  --color-gris-claro: #F5F5F5;
-  --color-oro-metalico: #D4AF37;
-  --color-gris-medio: #666666;
+  --color-turquesa: rgb(64, 224, 208);
+  --color-fondo: rgb(232, 248, 246);
+  --color-blanco: rgb(255, 255, 255);
+  --color-gris-oscuro: rgb(51, 51, 51);
+  --color-gris-claro: rgb(245, 245, 245);
+  --color-oro-metalico: rgb(212, 175, 55);
+  --color-gris-medio: rgb(102, 102, 102);
 
   /* Tipografía */
   --font-family-primary: 'Playfair Display', serif;
   --font-family-secondary: 'Montserrat', sans-serif;
 
   /* Tamaños de fuente */
-  --font-size-h1: 48px;
-  --font-size-h2: 36px;
+  --font-size-h1: 40px;
+  --font-size-h2: 32px;
   --font-size-h3: 24px;
   --font-size-p: 16px;
 
@@ -45,7 +46,8 @@ body,
 body {
   font-family: var(--font-family-secondary);
   color: var(--color-gris-oscuro);
-  background-color: var(--color-blanco);
+  background-image: url('../assets/protruding-squares.svg');
+
 }
 
 /* Enlaces */
@@ -53,10 +55,14 @@ a {
   text-decoration: none;
   color: var(--color-turquesa);
   font-weight: var(--font-weight-medium);
+  transition: color 0.3s ease-in-out;
+  
 }
 
 a:hover {
   text-decoration: underline;
+  transition: color 0.3s ease-in-out;
+
 }
 
 /* Estilos globales para botones */
@@ -119,6 +125,10 @@ h6 {
   font-weight: normal;
   margin: 0;
   color: var(--color-gris-oscuro);
+   user-select: none; /* Desactivar selección de texto */
+      -webkit-user-select: none; /* Safari, Chrome */
+      -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
 h1 {
@@ -145,6 +155,10 @@ p {
   font-size: var(--font-size-p);
   font-weight: var(--font-weight-regular);
   color: var(--color-gris-oscuro);
+   user-select: none; /* Desactivar selección de texto */
+      -webkit-user-select: none; /* Safari, Chrome */
+      -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
 /* Formularios y entradas */
@@ -171,30 +185,12 @@ label {
   color: var(--color-gris-oscuro);
   margin-bottom: 5px;
   display: block;
+   user-select: none; /* Desactivar selección de texto */
+      -webkit-user-select: none; /* Safari, Chrome */
+      -moz-user-select: none; /* Firefox */
+      -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
-/* Navegación */
-.navbar {
-  background-color: var(--color-blanco);
-  border-bottom: 1px solid var(--color-gris-claro);
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-}
-
-.navbar a {
-  color: var(--color-gris-oscuro);
-  padding: 15px 20px;
-  display: inline-block;
-  font-family: var(--font-family-secondary);
-  font-size: var(--font-size-p);
-  font-weight: var(--font-weight-medium);
-}
-
-.navbar a:hover {
-  color: var(--color-turquesa);
-}
 
 /* Contenedor principal */
 .container {
