--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -55,7 +55,7 @@ main {
     max-width: 1200px;
     min-height: 100vh;
     margin: 0 auto;
-    padding: 2rem 0;
+    width: 99%;
     text-align: left;
     background-color: transparent;
 }
