--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,5 +1,6 @@
 /* Importación de fuentes */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 :root {
   /* Colores */
@@ -13,7 +14,7 @@
   --color-gris-medio: rgb(102, 102, 102);
 
   /* Tipografía */
-  --font-family-primary: 'Playfair Display', serif;
+  --font-family-primary: 'Poppins', sans-serif;
   --font-family-secondary: 'Montserrat', sans-serif;
 
   /* Tamaños de fuente */
@@ -55,7 +56,6 @@ main {
     max-width: 1200px;
     min-height: 100vh;
     margin: 0 auto;
-    width: 99%;
     text-align: left;
     background-color: transparent;
 }
