--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -57,7 +57,7 @@ main {
 	min-height: 100vh;
 	margin: 0 auto;
 	text-align: left;
-	background-color: transparent;
+	background-color: var(--color-fondo);
 }
 
 .container{
