--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -54,7 +54,7 @@ body {
 
 main {
 	max-width: 1200px;
-	min-height: 100vh;
+	min-height: 100dvh;
 	margin: 0 auto;
 	text-align: left;
 	background-color: var(--color-fondo);
